[gd_scene load_steps=11 format=3 uid="uid://dmn8nkpogiwsf"]

[ext_resource type="PackedScene" uid="uid://i4jm6sckeneh" path="res://player/Player.tscn" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://q8chan1e2n18" path="res://main.gd" id="1_lquwl"]
[ext_resource type="Texture2D" uid="uid://cjam6rwymbgmu" path="res://tilemap/background/background 3/orig.png" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://ds8aae77ps3fc" path="res://hud.tscn" id="3_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(548.75, 650.125)

[sub_resource type="Animation" id="1"]

[sub_resource type="Animation" id="2"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="3"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qbwwp"]
_data = {
&"idle": SubResource("1"),
&"stagger": SubResource("2"),
&"walk": SubResource("3")
}

[sub_resource type="Curve2D" id="Curve2D_lquwl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -640, -400, 0, 0, 0, 0, 640, -400, 0, 0, 0, 0, 640, 320, 0, 0, 0, 0, -640, 320, 0, 0, 0, 0, -640, -400)
}
point_count = 5

[node name="Main" type="Node2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_lquwl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_1bvp3")

[node name="Boss Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss Area"]
position = Vector2(2425.38, 1851)
shape = SubResource("RectangleShape2D_lquwl")

[node name="Player" parent="." instance=ExtResource("1_1bvp3")]
position = Vector2(640, 400)
collision_mask = 3

[node name="StateMachine" parent="Player" index="0"]
start_state = NodePath("Idle")

[node name="AnimationPlayer" parent="Player" index="1"]
libraries = {
&"": SubResource("AnimationLibrary_qbwwp")
}

[node name="AnimatedSprite2D" parent="Player/BodyPivot" index="0"]
animation = &"walk_backward"

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_lquwl")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-640, -400)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(751, 448)

[node name="HUD" parent="." instance=ExtResource("3_h2yge")]

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="start_game" from="HUD" to="." method="new_game"]

[editable path="Player"]
